# cybersecurity-badusb

./: .gitignore  Dockerfile  README.md  Untitled presentation.pptx  hey.ps1  hey2.ps1  makedocker.bat
dev_hid_composite/: CMakeLists.txt  hey.ps1  main.c  usb_descriptors.c
server/: Dockerfile  app.py  data.json  makedocker.bat
server/templates/: list.html
